--- a/package.json
+++ b/package.json
@@ -1,16 +1,10 @@
 {
-  "name": "flashbattle",
-  "version": "1.0.0",
-  "private": true,
-  "type": "module",
-  "main": "server.js",
-  "scripts": {
-    "start": "node server.js",
-    "admin": "node admin.js"
-  },
+  "name": "flashbattle_pro",
+  "version": "2.0.0",
   "dependencies": {
-    "express": "^4.18.2",
-    "ioredis": "^5.3.2",
-    "socket.io": "^4.7.1"
+    "express": "^4",
+    "socket.io": "^4",
+    "jsonwebtoken": "^9",
+    "ioredis": "^5"
   }
 }
