--- a/manifest.json
+++ b/manifest.json
@@ -1,9 +1,20 @@
 {
   "name": "FlashBattle Pro",
-  "short_name": "FBattle",
-  "start_url": "/index.html",
+  "short_name": "FlashBattle",
+  "start_url": "/",
   "display": "standalone",
   "background_color": "#ffffff",
-  "theme_color": "#3367D6",
-  "icons": []
+  "theme_color": "#1976d2",
+  "icons": [
+    {
+      "src": "icons/icon-192.png",
+      "sizes": "192x192",
+      "type": "image/png"
+    },
+    {
+      "src": "icons/icon-512.png",
+      "sizes": "512x512",
+      "type": "image/png"
+    }
+  ]
 }
