--- a/package.json
+++ b/package.json
@@ -1,20 +1,17 @@
 {
-  "name": "flashbattle",
+  "name": "flashbattle-pro",
   "version": "1.0.0",
-  "private": true,
+  "description": "Redis 線上測驗系統：房間競賽 + JWT 帳號 + 多模式排行榜",
+  "type": "module",
   "main": "server.js",
   "scripts": {
-    "start": "node server.js",
-    "admin": "node admin.js",
-    "client:install": "cd client && npm install",
-    "client:build": "cd client && npm run build",
-    "build-all": "npm run client:install && npm run client:build"
+    "start": "node server.js"
   },
   "dependencies": {
-    "express": "^4.18.2",
-    "ioredis": "^5.3.2",
-    "readline-sync": "^1.4.10",
-    "redis": "^5.10.0",
-    "socket.io": "^4.7.1"
+    "bcryptjs": "^2.4.3",
+    "express": "^4.19.0",
+    "ioredis": "^5.4.1",
+    "jsonwebtoken": "^9.0.2",
+    "socket.io": "^4.8.1"
   }
 }
